Relays and spikes now don't randomly die to environmental burning
Hps are the same, but they're now immune to AOE burn and environment damage stuff.

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -557,23 +557,23 @@ ShouldCleanupObsoleteUnits=true
 
 ; Difficulty is optional -- if undefined, it will apply to all difficulties not already defined
 ; This is the HP of the objective during the Invasion and Avenger Defense missions
-+DestructibleActorHealthOverride=(ArchetypeName="Mission_Assets.AvengerDefense.Toughness_DisruptorSpike", Health=30, Difficulty=0)
-+DestructibleActorHealthOverride=(ArchetypeName="Mission_Assets.AvengerDefense.Toughness_DisruptorSpike", Health=35, Difficulty=1)
-+DestructibleActorHealthOverride=(ArchetypeName="Mission_Assets.AvengerDefense.Toughness_DisruptorSpike", Health=40, Difficulty=2)
-+DestructibleActorHealthOverride=(ArchetypeName="Mission_Assets.AvengerDefense.Toughness_DisruptorSpike", Health=40, Difficulty=3)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_DisruptorSpike_LW", Health=30, Difficulty=0)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_DisruptorSpike_LW", Health=35, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_DisruptorSpike_LW", Health=40, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_DisruptorSpike_LW", Health=40, Difficulty=3)
 
 ; This is the HP of the objective when XCOM is attacking a device
-+DestructibleActorHealthOverride=(ArchetypeName="Mission_Assets.DestroyObject.Toughness_AlienRelay_T1", Health=16, Difficulty=0) ; base game is 6 for reference
-+DestructibleActorHealthOverride=(ArchetypeName="Mission_Assets.DestroyObject.Toughness_AlienRelay_T1", Health=20, Difficulty=1)
-+DestructibleActorHealthOverride=(ArchetypeName="Mission_Assets.DestroyObject.Toughness_AlienRelay_T1", Health=20, Difficulty=2)
-+DestructibleActorHealthOverride=(ArchetypeName="Mission_Assets.DestroyObject.Toughness_AlienRelay_T1", Health=24, Difficulty=3)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_AlienRelay_T1", Health=16, Difficulty=0) ; base game is 6 for reference
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_AlienRelay_T1", Health=20, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_AlienRelay_T1", Health=20, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_AlienRelay_T1", Health=24, Difficulty=3)
 
-+DestructibleActorHealthOverride=(ArchetypeName="Mission_Assets.DestroyObject.Toughness_AlienRelay_T2", Health=20, Difficulty=0) 
-+DestructibleActorHealthOverride=(ArchetypeName="Mission_Assets.DestroyObject.Toughness_AlienRelay_T2", Health=30, Difficulty=1)
-+DestructibleActorHealthOverride=(ArchetypeName="Mission_Assets.DestroyObject.Toughness_AlienRelay_T2", Health=30, Difficulty=2)
-+DestructibleActorHealthOverride=(ArchetypeName="Mission_Assets.DestroyObject.Toughness_AlienRelay_T2", Health=36, Difficulty=3)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_AlienRelay_T2", Health=20, Difficulty=0) 
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_AlienRelay_T2", Health=30, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_AlienRelay_T2", Health=30, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_AlienRelay_T2", Health=36, Difficulty=3)
 
-+DestructibleActorHealthOverride=(ArchetypeName="Mission_Assets.DestroyObject.Toughness_AlienRelay_T3", Health=24, Difficulty=0) 
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_AlienRelay_T3", Health=24, Difficulty=0) 
 +DestructibleActorHealthOverride=(ArchetypeName="Mission_Assets.DestroyObject.Toughness_AlienRelay_T3", Health=40, Difficulty=1)
 +DestructibleActorHealthOverride=(ArchetypeName="Mission_Assets.DestroyObject.Toughness_AlienRelay_T3", Health=40, Difficulty=2)
 +DestructibleActorHealthOverride=(ArchetypeName="Mission_Assets.DestroyObject.Toughness_AlienRelay_T3", Health=48, Difficulty=3)
