--- a/LongWarOfTheChosen/Config/XComMissionDefs.ini
+++ b/LongWarOfTheChosen/Config/XComMissionDefs.ini
@@ -3151,6 +3151,7 @@
                        ArcToSpawn[0]=(ArchetypePath="XComInteractiveLevelActor'Mission_Assets.Archetypes.ARC_IA_GenericObjectiveMarker'"), \\
                        bCanSpawnOutsideObjectiveParcel=True, bReplaceSwapActor=True)
 
+; NOTE: The force levels for relay health are now controlled in Kismet for the mission type
 +arrObjectiveSpawnInfo=(sMissionType="DestroyRelay_LW", bUseObjectiveLocation=True, \\
                        iMinObjectives=1, iMaxObjectives=1, iMinTilesBetweenObjectives=0, \\
                        iMinTilesFromObjectiveCenter=0, iMaxTilesFromObjectiveCenter=24, \\
