--- a/LongWarOfTheChosen/Config/XComGame.ini
+++ b/LongWarOfTheChosen/Config/XComGame.ini
@@ -149,6 +149,7 @@ RequiredHighlanderVersion = (MajorVersion = 1, MinorVersion = 29, PatchVersion =
 +IncompatibleMods="StormEagleReplacer"
 +IncompatibleMods="PrototypeArmoury"
 +IncompatibleMods="WOTC_APA_WeaponItemOverhaul"
++IncompatibleMods="LootIndicator"
 
 +RequiredMods="X2WOTCCommunityHighlander"
 +RequiredMods="robojumperSquadSelect_WotC"
