Refactor objective HP so that pips show correctly after save/load
Additional handling for saved games so that you don't see 16 HP pips on your 40 hp relay and then they don't go down when you shoot it.

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -555,14 +555,38 @@ ShouldCleanupObsoleteUnits=true
 +SOUND_RANGE_DIFFICULTY_MODIFIER[2]=0.0
 +SOUND_RANGE_DIFFICULTY_MODIFIER[3]=0.0
 
-; Difficulty is optional -- if undefined, it will apply to all difficulties not already defined
+; Difficulty is optional -- if undefined, it will apply to all difficulties not already defined 
+
+; The base actors, sets max HP values on the actors (used when loading a save)
 ; This is the HP of the objective during the Invasion and Avenger Defense missions
++DestructibleActorHealthOverride=(ArchetypeName="Alien_RestrictorSpike.Archetypes.ARC_AlienRestrictorSpike_Anim", Health=30, Difficulty=0)
++DestructibleActorHealthOverride=(ArchetypeName="Alien_RestrictorSpike.Archetypes.ARC_AlienRestrictorSpike_Anim", Health=35, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="Alien_RestrictorSpike.Archetypes.ARC_AlienRestrictorSpike_Anim", Health=40, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="Alien_RestrictorSpike.Archetypes.ARC_AlienRestrictorSpike_Anim", Health=40, Difficulty=3)
+
+; This is the HP of the objective when XCOM is attacking a device
++DestructibleActorHealthOverride=(ArchetypeName="AlienRelay.Archetypes.ARC_RelayTransmitter_Anim_T1", Health=16, Difficulty=0) ; base game is 6 for reference
++DestructibleActorHealthOverride=(ArchetypeName="AlienRelay.Archetypes.ARC_RelayTransmitter_Anim_T1", Health=20, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="AlienRelay.Archetypes.ARC_RelayTransmitter_Anim_T1", Health=20, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="AlienRelay.Archetypes.ARC_RelayTransmitter_Anim_T1", Health=24, Difficulty=3)
+
++DestructibleActorHealthOverride=(ArchetypeName="AlienRelay.Archetypes.ARC_RelayTransmitter_Anim_T2", Health=20, Difficulty=0) 
++DestructibleActorHealthOverride=(ArchetypeName="AlienRelay.Archetypes.ARC_RelayTransmitter_Anim_T2", Health=30, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="AlienRelay.Archetypes.ARC_RelayTransmitter_Anim_T2", Health=30, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="AlienRelay.Archetypes.ARC_RelayTransmitter_Anim_T2", Health=36, Difficulty=3)
+
++DestructibleActorHealthOverride=(ArchetypeName="AlienRelay.Archetypes.ARC_RelayTransmitter_Anim_T3", Health=24, Difficulty=0) 
++DestructibleActorHealthOverride=(ArchetypeName="AlienRelay.Archetypes.ARC_RelayTransmitter_Anim_T3", Health=40, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="AlienRelay.Archetypes.ARC_RelayTransmitter_Anim_T3", Health=40, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="AlienRelay.Archetypes.ARC_RelayTransmitter_Anim_T3", Health=48, Difficulty=3)
+
+; These ones are the Toughness values to make it scale with difficulty
+
 +DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_DisruptorSpike_LW", Health=30, Difficulty=0)
 +DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_DisruptorSpike_LW", Health=35, Difficulty=1)
 +DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_DisruptorSpike_LW", Health=40, Difficulty=2)
 +DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_DisruptorSpike_LW", Health=40, Difficulty=3)
 
-; This is the HP of the objective when XCOM is attacking a device
 +DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_AlienRelay_T1", Health=16, Difficulty=0) ; base game is 6 for reference
 +DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_AlienRelay_T1", Health=20, Difficulty=1)
 +DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_AlienRelay_T1", Health=20, Difficulty=2)
@@ -574,9 +598,9 @@ ShouldCleanupObsoleteUnits=true
 +DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_AlienRelay_T2", Health=36, Difficulty=3)
 
 +DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_AlienRelay_T3", Health=24, Difficulty=0) 
-+DestructibleActorHealthOverride=(ArchetypeName="Mission_Assets.DestroyObject.Toughness_AlienRelay_T3", Health=40, Difficulty=1)
-+DestructibleActorHealthOverride=(ArchetypeName="Mission_Assets.DestroyObject.Toughness_AlienRelay_T3", Health=40, Difficulty=2)
-+DestructibleActorHealthOverride=(ArchetypeName="Mission_Assets.DestroyObject.Toughness_AlienRelay_T3", Health=48, Difficulty=3)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_AlienRelay_T3", Health=40, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_AlienRelay_T3", Health=40, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_LW.Toughness.Toughness_AlienRelay_T3", Health=48, Difficulty=3)
 
 ; Make the Chosen Sarcophagus more challenging to take down
 ;+DestructibleActorHealthOverride=(ArchetypeName="MissionAssets_XPACK.Toughness.Toughness_ChosenSarcophagus_T1", Health=60, Difficulty=0) 
@@ -671,6 +695,21 @@ ShouldCleanupObsoleteUnits=true
 +DestructibleActorHealthOverride=(ArchetypeName="Mission_Assets.ProtectDevice.Toughness_DataInterceptor_T3", Health=64, Difficulty=1)
 +DestructibleActorHealthOverride=(ArchetypeName="Mission_Assets.ProtectDevice.Toughness_DataInterceptor_T3", Health=57, Difficulty=2)
 +DestructibleActorHealthOverride=(ArchetypeName="Mission_Assets.ProtectDevice.Toughness_DataInterceptor_T3", Health=50, Difficulty=3)
+
++DestructibleActorHealthOverride=(ArchetypeName="SignalInterceptDevice.Archetypes.ARC_IA_SignalInterceptDevice_T1", Health=27, Difficulty=0) 
++DestructibleActorHealthOverride=(ArchetypeName="SignalInterceptDevice.Archetypes.ARC_IA_SignalInterceptDevice_T1", Health=24, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="SignalInterceptDevice.Archetypes.ARC_IA_SignalInterceptDevice_T1", Health=21, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="SignalInterceptDevice.Archetypes.ARC_IA_SignalInterceptDevice_T1", Health=18, Difficulty=3)
+
++DestructibleActorHealthOverride=(ArchetypeName="SignalInterceptDevice.Archetypes.ARC_IA_SignalInterceptDevice_T2", Health=45, Difficulty=0) 
++DestructibleActorHealthOverride=(ArchetypeName="SignalInterceptDevice.Archetypes.ARC_IA_SignalInterceptDevice_T2", Health=40, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="SignalInterceptDevice.Archetypes.ARC_IA_SignalInterceptDevice_T2", Health=35, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="SignalInterceptDevice.Archetypes.ARC_IA_SignalInterceptDevice_T2", Health=30, Difficulty=3)
+
++DestructibleActorHealthOverride=(ArchetypeName="SignalInterceptDevice.Archetypes.ARC_IA_SignalInterceptDevice_T3", Health=71, Difficulty=0) 
++DestructibleActorHealthOverride=(ArchetypeName="SignalInterceptDevice.Archetypes.ARC_IA_SignalInterceptDevice_T3", Health=64, Difficulty=1)
++DestructibleActorHealthOverride=(ArchetypeName="SignalInterceptDevice.Archetypes.ARC_IA_SignalInterceptDevice_T3", Health=57, Difficulty=2)
++DestructibleActorHealthOverride=(ArchetypeName="SignalInterceptDevice.Archetypes.ARC_IA_SignalInterceptDevice_T3", Health=50, Difficulty=3)
 
 ; +DestructibleActorHealthOverride=(ArchetypeName="GameData_Toughness_X2.Toughness.Toughness_STRONG",		Health=18)
 ; +DestructibleActorHealthOverride=(ArchetypeName="GameData_Toughness_X2.Toughness.Toughness_STANDARD",	Health=10)
