Add a global alert modifier config
Allow people to adjust tactical difficulty further without needing to touch a pile of things or affect the strategic layer

--- a/LongWarOfTheChosen/Config/XComLW_Activities.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Activities.ini
@@ -9,6 +9,10 @@ INFILTRATION_TO_DISABLE_SIT_REPS=1.25
 
 CHOSEN_APPEARANCE_ALERT_MOD = -3
 
+; This will adjust alert for all missions by a flat amount. Can tweak difficulty
+; for basically everything except Covert Ambushes and Chosen Supply Raids which are fixed.
+GlobalAlertModifier = 0
+
 INFILTRATION_SIT_REPS[0]="InfilSitRep_Easy"
 INFILTRATION_SIT_REPS[1]="InfilSitRep_Moderate"
 INFILTRATION_SIT_REPS[2]="InfilSitRep_Hard"
