Separate Phosphorus ability lists
Separate the list of abilities that should get the shred bonus from Phosphorus from abilities that should get the Phosphorus condition for better compatibility.

--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -1145,6 +1145,10 @@ BLOODTHIRST_T5_DMG = 3
 MaxAblativeHeal=0
 
 [LW_Overhaul.X2Effect_Phosphorus]
+; Defines the abilities gain the shred bonus from Phosphorus
+; Base LW flamethrower abilities are already included in the effect
+; +PhosphorusShredAbilities = 
+
 BONUS_CV_SHRED = 1
 BONUS_MG_SHRED = 2
 BONUS_BM_SHRED = 3
@@ -1209,8 +1213,10 @@ GREATER_PADDING_BM=4
 [LW_Overhaul.OPTC_SharpshooterAim]
 +Aim_AllowedAbilities = HunkerDown
 
-; This will OPTC other modded flamethrower things to add Phosphorus support to them.
+; Adds Phosphorus support for modded flamethrower abilities
 ; LW Gauntlets and Purifier flamethrower is already handled separately
+; Use this array only for the abilities that explicitly deal Fire or Napalm damage or rely on weapons with Napalm damage type
+; Use PhosphorusShredAbilities array on the effect to define which abilities should get the shred bonus in addition to the standard ones
 [LW_Overhaul.OPTC_Phosphorus]
 
 ; +PhosphorusAbilities = YourAbilityHere
