Add configs for Reliable Ever Vigilant + Smart Overwatch All
QOL mods that are often used so this helps them  work better.

--- a/LongWarOfTheChosen/Config/XComAI.ini
+++ b/LongWarOfTheChosen/Config/XComAI.ini
@@ -403,6 +403,54 @@ Child[4]=HuntEnemyWithCover)
 
 ;;;;;;;;;;; END BEHAVIOR TREE MODIFICATIONS ;;;;;;;;;;;;;;;;;;
 
+
+;;;;; Mod config for QOL stuff: ;;;;;
+
+; Smart Overwatch All:
+
++EquivalentAbilities=( KeyName=Overwatch, EquivalentAbilityName[0]=LongWatch )
+
++CustomNodes=(NodeTypeString=SmartOverwatchAllCondition, ExtendsFromType=Condition, ClassName="SmartOverwatchAll.X2AIBTConditions_SmartOverwatchAll")
+
++Behaviors=(BehaviorName=ShouldReload, NodeType=SmartOverwatchAllCondition)
+
++Behaviors=(BehaviorName=SelectAbility-PistolOverwatch, NodeType=Action)
+
+
++Behaviors=(BehaviorName=SelectAbility-IRI_TemplarShield, NodeType=Action)
++Behaviors=(BehaviorName=SelectAbility-IRI_Rider_Intercept, NodeType=Action)
++Behaviors=(BehaviorName=SelectAbility-OneForAll, NodeType=Action)
++Behaviors=(BehaviorName=SelectAbility-SteadyWeapon, NodeType=Action)
++Behaviors=(BehaviorName=SelectAbility-Stock_LW_Bsc_Ability, NodeType=Action)
++Behaviors=(BehaviorName=SelectAbility-Stock_LW_Adv_Ability, NodeType=Action)
++Behaviors=(BehaviorName=SelectAbility-Stock_LW_Sup_Ability, NodeType=Action)
++Behaviors=(BehaviorName=SelectAbility-SniperRifleOverwatch, NodeType=Action)
++Behaviors=(BehaviorName=SelectAbility-SnapShotOverwatch, NodeType=Action)
++Behaviors=(BehaviorName=SelectAbility-FastReload, NodeType=Action)
+
+
++Behaviors=(BehaviorName=ConsiderReload, NodeType=Sequence, \\
+    Child[0]=NotLastActionPoint, \\
+    Child[1]=ShouldReload, \\
+    Child[2]=SelectAbility-Reload)
+
++Behaviors=(BehaviorName=SmartOverwatchAll, NodeType=Selector, \\
+    Child[0]=ConsiderReload, \\
+    Child[1]=SelectAbility-SteadyWeapon, \\
+    Child[2]=SelectAbility-Stock_LW_Bsc_Ability, \\
+    Child[3]=SelectAbility-Stock_LW_Adv_Ability, \\
+    Child[4]=SelectAbility-Stock_LW_Sup_Ability, \\
+    Child[5]=SelectAbility-SniperRifleOverwatch, \\
+    Child[6]=SelectAbility-SnapShotOverwatch, \\
+    Child[7]=SelectAbility-PistolOverwatch, \\
+    Child[8]=SelectAbility-Overwatch, \\
+    Child[9]=SelectAbility-IRI_Rider_Intercept, \\
+    Child[10]=SelectAbility-IRI_TemplarShield, \\
+    Child[11]=SelectAbility-OneForAll, \\
+    Child[12]=SelectAbility-HunkerDown)
+
+
+
 [XComGame.XGAIPlayer_TheLost]
 ; Give Lost an equal chance to attack XCOM or the aliens
 DistributionPercentToXCom=60
