--- a/LongWarOfTheChosen/Config/XComGame.ini
+++ b/LongWarOfTheChosen/Config/XComGame.ini
@@ -171,3 +171,118 @@ RunPriorityGroup=RUN_LAST
 [LWModJamFixes CHDLCRunOrder]
 RunPriorityGroup=RUN_LAST
 +RunAfter=ModJamLWOTC_M2
+
+; Reliable Ever Vigilant QOL changes.
+
+[WOTC_ReliableEverVigilant.X2Ability_EverVigilant]
+;basic actions
++EverVigilantIgnore=Loot ; Non-movement abilities that don't stop ever vigilant
++EverVigilantIgnore=Interact
++EverVigilantIgnore=Interact_OpenDoor ; opens doors
++EverVigilantIgnore=Interact_OpenChest ; opens advent loot crates
++EverVigilantIgnore=Interact_MarkSupplyCrate ; mark extract supply crates
++EverVigilantIgnore=Interact_PlantBomb ; plant bomb on missions such as sabotage monument
++EverVigilantIgnore=Interact_SmashNGrab ; open chests from smash n grab missions
++EverVigilantIgnore=TargetingCrit ; These are hack rewards that have an ability trigger
++EverVigilantIgnore=TargetingDodge ; These are hack rewards that have an ability trigger
++EverVigilantIgnore=TargetingAimAndCrit ; These are hack rewards that have an ability trigger
++EverVigilantIgnore=IntegratedComms ; These are hack rewards that have an ability trigger
++EverVigilantIgnore=VideoFeed ; These are hack rewards that have an ability trigger
++EverVigilantIgnore=DisguisedSignals ; These are hack rewards that have an ability trigger
++EverVigilantIgnore=Interact_PlantBomb
++EverVigilantIgnore=Interact_TakeVial
++EverVigilantIgnore=Interact_StasisTube
++EverVigilantIgnore=Interact_SweaterTube
++EverVigilantIgnore=Interact_ActivateSpark
++EverVigilantIgnore=Interact_AtmosphereComputer
++EverVigilantIgnore=Interact_DLC2Transmitter
++EverVigilantIgnore=AbortMission
++EverVigilantIgnore=PlaceEvacZone
+
+; Utility abilities
++EverVigilantIgnore=OverwatchOthers
++EverVigilantIgnore=OthersHunkerDown
++EverVigilantIgnore=PreviewLOS
++EverVigilantIgnore=PreviewMovement
++EverVigilantIgnore=PreviewBodyLocation
+
+;base/lw abilities
++EverVigilantIgnore=Fortify ; fortify 
++EverVigilantIgnore=Shadow ; shadow
++EverVigilantIgnore=Dedication_LW ; dedication
++EverVigilantIgnore=RapidTargeting ; rapid targeting
++EverVigilantIgnore=QuickZap_LW ; quick zap
++EverVigilantIgnore=Interference ; interference
++EverVigilantIgnore=InspireAgility_LW ; inspire agility
++EverVigilantIgnore=Ghostwalker ; ghostwalker
++EverVigilantIgnore=RapidDeployment ; rapid deployment
++EverVigilantIgnore=SkirmisherInterrupt_LW ; interrupt
++EverVigilantIgnore=SkirmisherGrapple ; skirmisher's grapple
++EverVigilantIgnore=Grapple ; grapple 
++EverVigilantIgnore=GrapplePowered ; wraith suit grapple
++EverVigilantIgnore=ScanningProtocol ; scanning protocol
++EverVigilantIgnore=Quickburn ; quickburn
++EverVigilantIgnore=ScoutScanner ; Reconnoiter
++EverVigilantIgnore=FreeScanner ; Reconnoiter
++EverVigilantIgnore=BodyShield ; Body Shield
++EverVigilantIgnore=Nova ; Nova
++EverVigilantIgnore=LightningHands ; Lightning Hands
++EverVigilantIgnore=Incoming ; Incoming
++EverVigilantIgnore=WallPhasing ; Wraith Suit Wraith
+
+;mod jam abilities
++EverVigilantIgnore=NimbleHands ; mod jam
++EverVigilantIgnore=TitanStrike ; mod jam
++EverVigilantIgnore=FiredUp_LW ; mod jam
++EverVigilantIgnore=XcomSmartScanner ; mod jam
++EverVigilantIgnore=F_PierceTheVeil ; mod jam
++EverVigilantIgnore=MZBlink ; mod jam
++EverVigilantIgnore=ShieldTaunt ; mod jam
++EverVigilantIgnore=HiddenReserves ; mod jam
++EverVigilantIgnore=MZFrigidWhisper ; mod jam
++EverVigilantIgnore=BS_StrainMind ; mod jam
++EverVigilantIgnore=BS_StrainMindPassive ; mod jam
++EverVigilantIgnore=BS_RapidStun ; mod jam
++EverVigilantIgnore=ABBBodyHarvest ; mod jam
++EverVigilantIgnore=PAViciousBite ; mod jam
+
+; Hacking
++EverVigilantIgnore=Hack
++EverVigilantIgnore=Hack_Chest
++EverVigilantIgnore=Hack_Workstation
++EverVigilantIgnore=Hack_ObjectiveChest
++EverVigilantIgnore=Hack_Scan
++EverVigilantIgnore=Hack_ElevatorControl
++EverVigilantIgnore=IntrusionProtocol
++EverVigilantIgnore=IntrusionProtocol_Chest
++EverVigilantIgnore=IntrusionProtocol_Workstation
++EverVigilantIgnore=IntrusionProtocol_ObjectiveChest
++EverVigilantIgnore=IntrusionProtocol_Scan
++EverVigilantIgnore=IntrusionProtocol_Hack_ElevatorControl
++EverVigilantIgnore=HaywireProtocol
+
++EverVigilantIgnore=FullOverride
++EverVigilantIgnore=LW2WotC_FullOverride
++EverVigilantIgnore=WOTC_APA_FullOverride
++EverVigilantIgnore=WOTC_APA_ReaperHack
++EverVigilantIgnore=Hack_CovertObjectiveChest
++EverVigilantIgnore=RTTechnopathy_Hack
++EverVigilantIgnore=RTTechnopathy_Chest
++EverVigilantIgnore=RTTechnopathy_Workstation
++EverVigilantIgnore=RTTechnopathy_ObjectiveChest
+
+; Finalizing a hack will stop Ever Vigilant
++EverVigilantStopOnAbility=FinalizeHack
++EverVigilantStopOnAbility=FinalizeIntrusion
++EverVigilantStopOnAbility=FinalizeHaywire
++EverVigilantStopOnAbility=FinalizeSKULLJACK
++EverVigilantStopOnAbility=FinalizeSKULLMINE
+
++EverVigilantStopOnAbility=FinalizeFullOverride
++EverVigilantStopOnAbility=WOTC_APA_FinalizeFullOverride
++EverVigilantStopOnAbility=RTFinalizeTechnopathyHack
+
++EverVigilantStopOnAbility=OffensiveMovementExample ; Movement abilities that stops ever vigilant
++OverwatchAbilities=Overwatch ; Overwatch abilities, goes from top to bottom, picks the first ability you have in the list where you have enough ammo to use
++OverwatchAbilities=PistolOverwatch
++TurnEndEventPriority=50 ; Increase this value to allow ever vigilant to stack with deep cover at all times, decrease to stop it from stacking with deep cover forever
