off-by-default experimental save cleanup stuff
Initial implementation of a Tactical State Cleaner type mod but for item states. Off by default since it needs more testing.  Can be triggered as a console command as well.

Additional reference: https://github.com/rcd47/xcom-2-data/issues/16

game is very bad at cleaning stuff up, news at 11

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -137,6 +137,12 @@ bEnableCityHQs = true
 ; Disable this if you are using another mod that swaps golden path kismet.
 bUpdateWaterworldLW = true
 
+; EXPERIMENTAL: Tactical State Cleaner but for items/etc. Can decrease save bloat but is very untested. Off by default for now.
+; Can be done manually with console command too
+; command: Ted_TacticalLootCleaner
+
+bTacticalLootCleanup = false
+
 ; ------------------------------------------------------------------
 ; ------------------ Replacement Mission Defs ----------------------
 ; ------------------------------------------------------------------
