--- a/LongWarOfTheChosen/Config/XComGameData_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComGameData_SoldierSkills.ini
@@ -345,3 +345,4 @@ SHREDSTORM_TILE_WIDTH=9
 +IgnoreAbilities="TrackingShotMark"
 +IgnoreAbilities="TrackingShot"
 +IgnoreAbilities="MarkedForDeath_Hunter"
++IgnoreAbilities="ChosenKidnap"
