add variable to config
still set to false

--- a/LongWarOfTheChosen/Config/XComMissions.ini
+++ b/LongWarOfTheChosen/Config/XComMissions.ini
@@ -167,6 +167,10 @@ NumberOfCratesRequired_Veteran=4
 NumberOfCratesRequired_Commander=4
 NumberOfCratesRequired_Legend=4
 
+; If true, a squad viewer is added to each crate on generation, making them visible in the fog
+; if false, only the last crate (and assumedly closest to the player) receives a viewer during the tactical intro
+PlaceViewersOnCrates=false
+
 TurnsRemainingForFirstTimerWarning=-1
 TurnsRemainingForFinalTimerWarning=-1
 TurnsRemainingForSecondTimerWarning=-1
