Avatar Teleports out of Bind
Also nerfs chosen teleport range

--- a/LongWarOfTheChosen/Config/XComAI.ini
+++ b/LongWarOfTheChosen/Config/XComAI.ini
@@ -1886,3 +1886,8 @@ MAX_SURPRISED_SCAMPER_PATH_LENGTH=7		; Scamper paths longer than this number of 
 +Behaviors=(BehaviorName=IsMissionOfType-Defend_LW, NodeType=Condition)
 +Behaviors=(BehaviorName=IsMissionOfType-Terror_LW, NodeType=Condition)
 +Behaviors=(BehaviorName=IsMissionOfType-Invasion_LW, NodeType=Condition)
+
+; Psi Witch
++Behaviors=(BehaviorName=IsAbilityAvailable-TriggerDamagedTeleportLW, NodeType=Condition)
++Behaviors=(BehaviorName=SelectAbility-TriggerDamagedTeleportLW, NodeType=Action)
++Behaviors=(BehaviorName=TryTriggerDamagedTeleportLW, NodeType=Sequence, Child[0]=IsAbilityAvailable-TriggerDamagedTeleportLW, Child[1]=SelectAbility-TriggerDamagedTeleportLW)
