--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -1109,6 +1109,20 @@ SHIELD_ALLY_PCT_DR=0.67
 
 UNSTOPPABLE_MIN_MOB = 7
 
+; Chosen teleport when they can't path. values in Tiles
+
+PathingTeleport_Min_Radius = 3
+PathingTeleport_Max_Radius = 8
+
+; Avatar teleport when they get bound or void conduit. values in Tiles
+
+AvatarBoundTeleport_Min_Radius = 5
+AvatarBoundTeleport_Max_Radius = 10
+
++VoidConduitEffect_Names = VoidConduit
++VoidConduitEffect_Names = VoidConduitPatch
++VoidConduitEffect_Names = BindSustainedEffect
+
 ; These are #.#x mobility, so 0.7x base mob, not minus 70% mobility
 
 WARLOCK_MOBILITY_DEBUFF = 0.55f
