Update Iron Skin and Anticipation
New effects from Merist with better implementations

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -2267,7 +2267,9 @@ TEAMWORK_LVL3_CHARGES=2
 
 SUMMON_COOLDOWN=4
 
-MELEE_DAMAGE_REDUCTION=0.5f
+; This one is now in %!
+MELEE_DAMAGE_REDUCTION=50
+
 EXPLOSIVE_DAMAGE_REDUCTION=0.5f
 SCANNING_PROTOCOL_INITIAL_CHARGES=2
 
