New Reshi network tower maps
more parcels and PCPs

--- a/LongWarOfTheChosen/Config/XComPCPs.ini
+++ b/LongWarOfTheChosen/Config/XComPCPs.ini
@@ -18,6 +18,27 @@
 +arrAllPCPDefs=(MapName="RFT_Walkway_06x06_Skybridge_01_fixed", arrPlotTypes[0]="Rooftops", \\
 	strPCPType="Walkway", strTurnType="Mandatory", iWidth=6, iLength=6)
 
+; New Reshi ones
+
++arrAllPCPDefs=(MapName="ReshiPCP_RoofBurgers_06x06", arrPlotTypes[0]="Rooftops", \\
+	strPCPType="Walkway", strTurnType="Optional", iWidth=6, iLength=6)
++arrAllPCPDefs=(MapName="ReshiPCP_RoofBurgers_06x06", arrPlotTypes[0]="Rooftops", \\
+	strPCPType="Walkway", strTurnType="Mandatory", iWidth=6, iLength=6)
+
++arrAllPCPDefs=(MapName="ReshiPCP_RoofSkybridge_06x12", arrPlotTypes[0]="Rooftops", \\
+	strPCPType="Walkway", strTurnType="Optional", iWidth=6, iLength=12)
++arrAllPCPDefs=(MapName="ReshiPCP_RoofSkybridge_06x12", arrPlotTypes[0]="Rooftops", \\
+	strPCPType="Walkway", strTurnType="Mandatory", iWidth=6, iLength=12)
+
++arrAllPCPDefs=(MapName="ReshiPCP_RoofSpookyBridge_06x12", arrPlotTypes[0]="Rooftops", \\
+	strPCPType="Walkway", strTurnType="Optional", iWidth=6, iLength=12)
++arrAllPCPDefs=(MapName="ReshiPCP_RoofSpookyBridge_06x12", arrPlotTypes[0]="Rooftops", \\
+	strPCPType="Walkway", strTurnType="Mandatory", iWidth=6, iLength=12)
+
++arrAllPCPDefs=(MapName="ReshiPCP_RoofHut_06x12", arrPlotTypes[0]="Rooftops", \\
+	strPCPType="Walkway", strTurnType="Optional", iWidth=6, iLength=12)
++arrAllPCPDefs=(MapName="ReshiPCP_RoofHut_06x12", arrPlotTypes[0]="Rooftops", \\
+	strPCPType="Walkway", strTurnType="Mandatory", iWidth=6, iLength=12)
 
 ; fixed plot name: RFT_Walkway_06x06_Skybridge_01_fixed
 
