--- a/LongWarOfTheChosen/Config/XComParcels.ini
+++ b/LongWarOfTheChosen/Config/XComParcels.ini
@@ -66,16 +66,34 @@ arrAllParcelDefinitions=(MapName="md_ShootingRange_01_LW", eSize=eParcelSizeType
 ; modded parcel for AssaultNetworkFacility_LW
 +arrAllParcelDefinitions=(MapName="md_RegionalNetwork_01_LW", eSize=eParcelSizeType_Medium, arrPlotTypes[0]=(strPlotType="Rooftops"), ObjectiveTags[0]="AssaultNetworkTower_LW")
 
+; New ones from Reshi:
++arrAllParcelDefinitions=(MapName="ReshiParcel_NetworkHack_01", eSize=eParcelSizeType_Medium, arrPlotTypes[0]=(strPlotType="Rooftops"), ObjectiveTags[0]="AssaultNetworkTower_LW")
++arrAllParcelDefinitions=(MapName="ReshiParcel_NetworkHack_02", eSize=eParcelSizeType_Medium, arrPlotTypes[0]=(strPlotType="Rooftops"), ObjectiveTags[0]="AssaultNetworkTower_LW")
++arrAllParcelDefinitions=(MapName="ReshiParcel_NetworkHack_03", eSize=eParcelSizeType_Medium, arrPlotTypes[0]=(strPlotType="Rooftops"), ObjectiveTags[0]="AssaultNetworkTower_LW")
+
 ; Replace some parcel definitions to give more control on GP mission
 +arrAllParcelDefinitions=(MapName="sm_ServerRoom_01_LW", eSize=eParcelSizeType_Small, arrPlotTypes[0]=(strPlotType="Rooftops"), eFacing=EParcelFacingType_S, arrZoneTypes[0]="Server")
 +arrAllParcelDefinitions=(MapName="sm_VipOffice_01_LW", eSize=eParcelSizeType_Small, arrPlotTypes[0]=(strPlotType="Rooftops"), eFacing=EParcelFacingType_S, arrZoneTypes[0]="Office")
 +arrAllParcelDefinitions=(MapName="md_Boardroom_01_LW", eSize=eParcelSizeType_Medium, arrPlotTypes[0]=(strPlotType="Rooftops"), eFacing=EParcelFacingType_N, arrZoneTypes[0]="Boardroom")
 +arrAllParcelDefinitions=(MapName="md_Studio_01_LW", eSize=eParcelSizeType_Medium, arrPlotTypes[0]=(strPlotType="Rooftops"), eFacing=EParcelFacingType_N, arrZoneTypes[0]="Studio")
 
+;Reshi parcels for rooftops
++arrAllParcelDefinitions=(MapName="ReshiParcel_RooftopArmory_01", eSize=eParcelSizeType_Medium, arrPlotTypes[0]=(strPlotType="Rooftops"), eFacing=EParcelFacingType_N, arrZoneTypes[0]="Closed" ,arrZoneTypes[1]="Studio_mid" )
++arrAllParcelDefinitions=(MapName="ReshiParcel_RooftopCabin_01", eSize=eParcelSizeType_Medium, arrPlotTypes[0]=(strPlotType="Rooftops"), eFacing=EParcelFacingType_N, arrZoneTypes[0]="Closed" ,arrZoneTypes[1]="Studio_mid" )
++arrAllParcelDefinitions=(MapName="ReshiParcel_RooftopSmall_01", eSize=eParcelSizeType_Small, arrPlotTypes[0]=(strPlotType="Rooftops"), eFacing=EParcelFacingType_S, arrZoneTypes[0]="Open")
++arrAllParcelDefinitions=(MapName="ReshiParcel_RooftopSmall_02", eSize=eParcelSizeType_Small, arrPlotTypes[0]=(strPlotType="Rooftops"), eFacing=EParcelFacingType_S, arrZoneTypes[0]="Open")
+
+
 ; modified rooftop parcels for network tower missions
 +arrAllParcelDefinitions=(MapName="md_Studio_02_LW", eSize=eParcelSizeType_Medium, arrPlotTypes[0]=(strPlotType="Rooftops"), eFacing=EParcelFacingType_N, arrZoneTypes[0]="Studio_mid")
 +arrAllParcelDefinitions=(MapName="md_Boardroom_02", eSize=eParcelSizeType_Medium, arrPlotTypes[0]=(strPlotType="Rooftops"), eFacing=EParcelFacingType_S, arrZoneTypes[0]="Studio_mid")
-+arrAllParcelDefinitions=(MapName="md_LandingPad_01_LW", eSize=eParcelSizeType_Medium, arrPlotTypes[0]=(strPlotType="Rooftops"), eFacing=EParcelFacingType_N, arrZoneTypes[0]="Open_mid")
+
++arrAllParcelDefinitions=(MapName="md_LandingPad_01_LW", eSize=eParcelSizeType_Medium, arrPlotTypes[0]=(strPlotType="Rooftops"), eFacing=EParcelFacingType_N, arrZoneTypes[0]="Open", arrZoneTypes[1]="Open_mid")
+
++arrAllParcelDefinitions=(MapName="ReshiParcel_Rooftops_01", eSize=eParcelSizeType_Medium, arrPlotTypes[0]=(strPlotType="Rooftops"), eFacing=EParcelFacingType_N, arrZoneTypes[0]="Open", arrZoneTypes[1]="Open_mid")
++arrAllParcelDefinitions=(MapName="ReshiParcel_Rooftops_02", eSize=eParcelSizeType_Medium, arrPlotTypes[0]=(strPlotType="Rooftops"), eFacing=EParcelFacingType_N, arrZoneTypes[0]="Open", arrZoneTypes[2]="Open_mid")
++arrAllParcelDefinitions=(MapName="ReshiParcel_Rooftops_03", eSize=eParcelSizeType_Medium, arrPlotTypes[0]=(strPlotType="Rooftops"), eFacing=EParcelFacingType_N, arrZoneTypes[0]="Open", arrZoneTypes[3]="Open_mid")
+
 
 ; Parcels for Smash 'n' Grab
 +arrAllParcelDefinitions=(MapName="lg_Advent_Recruitment_01_LW", eSize=eParcelSizeType_Large, arrPlotTypes[0]=(strPlotType="SmallTown"), eFacing=EParcelFacingType_S, ObjectiveTags[0]="SmashNGrab_LW", ObjectiveTags[1]="BigSmashNGrab_LW", bAllowNonObjectiveOverride=false)
