Add 2 more PCPs for crate races
alternative train/convoy 16x48 tile PCPs since the base game only gives 1 of each

--- a/LongWarOfTheChosen/Config/XComPCPs.ini
+++ b/LongWarOfTheChosen/Config/XComPCPs.ini
@@ -68,3 +68,9 @@
 
 ;+arrAllPCPDefs=(MapName="TUN_Wall_StrSewer_16x05_01", arrPlotTypes[0]="Tunnels_Sewer", arrPlotTypes[1]="Tunnels_Subway", \\
 ;	strPCPType="Wall", strTurnType="StrSewer", iWidth=5, iLength=16)
+
++arrAllPCPDefs=(MapName="WLD_Train_SupplyExtract_16x48_02",  arrPlotTypes[0]="Wilderness", \\
+	strPCPType="AdventTrain", strTurnType="SupplyExtract", iWidth=16, iLength=48)
+
++arrAllPCPDefs=(MapName="WLD_Convoy_SupplyExtract_16x48_02",  arrPlotTypes[0]="Wilderness", \\
+	strPCPType="AdventConvoy", strTurnType="SupplyExtract", iWidth=16, iLength=48)
