More new parcels
1 new city center parcel from Reshi for HQs, Jailbreaks, and Smash n Grabs
2 new supply deport parcels from McDenny's Even More Maps that were unreleased, for Supply Extraction missions.

--- a/LongWarOfTheChosen/Config/XComMaps.ini
+++ b/LongWarOfTheChosen/Config/XComMaps.ini
@@ -40,6 +40,7 @@
 +arrMapImageDefs=(MapName="md_Advent_Security_03_LW"	, ImagePath="UILibrary_MissionImages.Mission_md_AdventSecurity_03", Biome="")
 +arrMapImageDefs=(MapName="md_GeneClinic_01_LW"			, ImagePath="UILibrary_MissionImages.Mission_md_GeneClinic_01", Biome="")	
 +arrMapImageDefs=(MapName="md_AlienEntertainment_01_LW"	, ImagePath="UILibrary_MissionImages.Mission_md_AlienEntertainment_01", Biome="")
++arrMapImageDefs=(MapName="ReshiParcel_CityPoliceStation_LAR"	, ImagePath="UILibrary_MissionImages.Mission_lg_GeneClinic_01", Biome="")
 
 ; Smash N Grab
 +arrMapImageDefs=(MapName="lg_Advent_Recruitment_01_LW"	, ImagePath="UILibrary_MissionImages.Missions_SMT_LG_AdventRecruitment_01_Arid", Biome="Arid")
@@ -60,6 +61,18 @@
 +arrMapImageDefs=(MapName="lg_TedAdventSupplyExtract_03", ImagePath="UILibrary_XPACK_MissionImages.Missions_WLD_LG_AdventSupplyExtract_01_Temp", Biome="Temperate")
 +arrMapImageDefs=(MapName="lg_TedAdventSupplyExtract_03", ImagePath="UILibrary_XPACK_MissionImages.Missions_WLD_LG_AdventSupplyExtract_01_Tundra", Biome="Tundra")
 +arrMapImageDefs=(MapName="lg_TedAdventSupplyExtract_03", ImagePath="UILibrary_XPACK_MissionImages.Missions_WLD_LG_AdventSupplyExtract_01_Xenoform", Biome="Xenoform")
+
+
++arrMapImageDefs=(MapName="lg_AdventSupplyExtract_02_LW", ImagePath="UILibrary_XPACK_MissionImages.Missions_WLD_LG_AdventSupplyExtract_01_Arid", Biome="Arid")
++arrMapImageDefs=(MapName="lg_AdventSupplyExtract_02_LW", ImagePath="UILibrary_XPACK_MissionImages.Missions_WLD_LG_AdventSupplyExtract_01_Temp", Biome="Temperate")
++arrMapImageDefs=(MapName="lg_AdventSupplyExtract_02_LW", ImagePath="UILibrary_XPACK_MissionImages.Missions_WLD_LG_AdventSupplyExtract_01_Tundra", Biome="Tundra")
++arrMapImageDefs=(MapName="lg_AdventSupplyExtract_02_LW", ImagePath="UILibrary_XPACK_MissionImages.Missions_WLD_LG_AdventSupplyExtract_01_Xenoform", Biome="Xenoform")
+
++arrMapImageDefs=(MapName="lg_AdventSupplyExtract_03_LW", ImagePath="UILibrary_XPACK_MissionImages.Missions_WLD_LG_AdventSupplyExtract_01_Arid", Biome="Arid")
++arrMapImageDefs=(MapName="lg_AdventSupplyExtract_03_LW", ImagePath="UILibrary_XPACK_MissionImages.Missions_WLD_LG_AdventSupplyExtract_01_Temp", Biome="Temperate")
++arrMapImageDefs=(MapName="lg_AdventSupplyExtract_03_LW", ImagePath="UILibrary_XPACK_MissionImages.Missions_WLD_LG_AdventSupplyExtract_01_Tundra", Biome="Tundra")
++arrMapImageDefs=(MapName="lg_AdventSupplyExtract_03_LW", ImagePath="UILibrary_XPACK_MissionImages.Missions_WLD_LG_AdventSupplyExtract_01_Xenoform", Biome="Xenoform")
+
 
 
 ; Testing startup maps
