--- a/LongWarOfTheChosen/Config/XComParcels.ini
+++ b/LongWarOfTheChosen/Config/XComParcels.ini
@@ -56,6 +56,7 @@ arrAllParcelDefinitions=(MapName="md_ShootingRange_01_LW", eSize=eParcelSizeType
 ; Modded parcels for jailbreak missions
 
 +arrAllParcelDefinitions=(MapName="lg_PropagandaCenter_02_LW", eSize=eParcelSizeType_Large, arrPlotTypes[0]=(strPlotType="CityCenter"), eFacing=EParcelFacingType_N, ObjectiveTags[0]="Jailbreak_LW", ObjectiveTags[1]="SmashNGrab_LW", bAllowNonObjectiveOverride=false)
++arrAllParcelDefinitions=(MapName="ReshiParcel_CityPoliceStation_LAR", eSize=eParcelSizeType_Large, arrPlotTypes[0]=(strPlotType="CityCenter"), eFacing=EParcelFacingType_N, ObjectiveTags[0]="Jailbreak_LW", ObjectiveTags[1]="AssaultAlienBase_LW", ObjectiveTags[2]="SmashNGrab_LW", bAllowNonObjectiveOverride=false)
 +arrAllParcelDefinitions=(MapName="lg_GeneClinic_01_LW_V2", eSize=eParcelSizeType_Large, arrPlotTypes[0]=(strPlotType="CityCenter"), eFacing=EParcelFacingType_N, ObjectiveTags[0]="Jailbreak_LW", ObjectiveTags[1]="SmashNGrab_LW", ObjectiveTags[2]="BigSmashNGrab_LW",bAllowNonObjectiveOverride=false)
 ; md_Advent_Security_02 is purposefully not a "_LW" suffixed parcel. This is the only base map with sufficient cells for each rebel to get their own so it is unmodified.
 +arrAllParcelDefinitions=(MapName="md_Advent_Security_02", eSize=eParcelSizeType_Medium, arrPlotTypes[0]=(strPlotType="CityCenter"), eFacing=EParcelFacingType_W, ObjectiveTags[0]="Jailbreak_LW", bAllowNonObjectiveOverride=false)
@@ -111,6 +112,16 @@ arrAllParcelDefinitions=(MapName="md_ShootingRange_01_LW", eSize=eParcelSizeType
 +arrAllParcelDefinitions=(MapName="lg_TedAdventSupplyExtract_03", eSize=eParcelSizeType_Large, \\
 	arrPlotTypes[0]=(strPlotType="Wilderness"), arrZoneTypes[0]="AdventDepot", \\
 	eFacing=EParcelFacingType_S, ObjectiveTags[0]="SupplyExtraction", ObjectiveTags[1]="BigSupplyExtraction", bAllowNonObjectiveOverride=true)
+
+; New Supply Extract Parcels from McDenny / EMM
+
++arrAllParcelDefinitions=(MapName="lg_AdventSupplyExtract_02_LW", eSize=eParcelSizeType_Large, \\
+   arrPlotTypes[0]=(strPlotType="Wilderness"), arrZoneTypes[0]="AdventDepot", \\
+   eFacing=EParcelFacingType_S, ObjectiveTags[0]="SupplyExtraction", ObjectiveTags[1]="BigSupplyExtraction", bAllowNonObjectiveOverride=true)
+
++arrAllParcelDefinitions=(MapName="lg_AdventSupplyExtract_03_LW", eSize=eParcelSizeType_Large, \\
+   arrPlotTypes[0]=(strPlotType="Wilderness"), arrZoneTypes[0]="AdventDepot", \\
+   eFacing=EParcelFacingType_S, ObjectiveTags[0]="SupplyExtraction", ObjectiveTags[1]="BigSupplyExtraction", bAllowNonObjectiveOverride=true)
 
 
 ; modified Advent Security parcels for City Center HQs
