Fix LOP for wilderness covert ambushes

--- a/LongWarOfTheChosen/Config/XComMissionDefs.ini
+++ b/LongWarOfTheChosen/Config/XComMissionDefs.ini
@@ -3219,6 +3219,13 @@
                        ArcToSpawn[0]=(ArchetypePath="XComInteractiveLevelActor'Mission_Assets.Archetypes.ARC_IA_GenericObjectiveMarker'"), \\
                        bCanSpawnOutsideObjectiveParcel=True, bReplaceSwapActor=True)
 
++arrObjectiveSpawnInfo=(sMissionType="CovertEscape_NonPCP_LW", bUseObjectiveLocation=True, \\
+                       iMinObjectives=1, iMaxObjectives=1, iMinTilesBetweenObjectives=0, \\
+                       iMinTilesFromObjectiveCenter=0, iMaxTilesFromObjectiveCenter=12, \\
+                       ArcToSpawn[0]=(ArchetypePath="XComInteractiveLevelActor'Mission_Assets.Archetypes.ARC_IA_GenericObjectiveMarker'"), \\
+                       bCanSpawnOutsideObjectiveParcel=True, bReplaceSwapActor=True)
+
+
 +arrObjectiveSpawnInfo=(sMissionType="IntelRaid_LW", bUseObjectiveLocation=True, \\
                        iMinObjectives=1, iMaxObjectives=1, iMinTilesBetweenObjectives=1, \\
                        iMinTilesFromObjectiveCenter=0, iMaxTilesFromObjectiveCenter=10000, \\
