--- a/LongWarOfTheChosen/Config/XComPlots.ini
+++ b/LongWarOfTheChosen/Config/XComPlots.ini
@@ -16,11 +16,9 @@
 +arrPlots=(MapName="Plot_SLM_LgObj_11_LW", strType="Slums", ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="LargePlot")
 +arrPlots=(MapName="Plot_SLM_LgObj_12_LW", strType="Slums", ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="LargePlot", ObjectiveTags[2]="Vehicle", ObjectiveTags[3]="GOps_Vehicle")
 +arrPlots=(MapName="Plot_SLM_MdObj_10_LW", strType="Slums", ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="MediumPlot", ObjectiveTags[2]="Vehicle", ObjectiveTags[3]="GOps_Vehicle")
-; This is missing overpass PCPs that were in the original game. They have been
-; broken down into smaller PCPs. If someone wanted to fix this map, the best
-; option would probably be to remove references to the old PCPs and use the new
-; ones instead.
-;+arrPlots=(MapName="Plot_SLM_Overpass_LgObj_10_LW", strType="Slums", ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="LargePlot", ObjectiveTags[2]="Vehicle", ObjectiveTags[3]="GOps_Vehicle")
+
+; SLM_Overpass_LgObj_10_LW is now fixed, if it's still broken for you, you need the latest content directories if you're building your own LWOTC install
++arrPlots=(MapName="Plot_SLM_Overpass_LgObj_10_LW", strType="Slums", ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="LargePlot", ObjectiveTags[2]="Vehicle", ObjectiveTags[3]="GOps_Vehicle")
 +arrPlots=(MapName="Plot_TWN_Mixed_LgObj_10_LW", strType="SmallTown", ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="LargePlot", ObjectiveTags[2]="Vehicle", ObjectiveTags[3]="GOps_Vehicle")
 +arrPlots=(MapName="Plot_TWN_Mixed_LgObj_11_LW", strType="SmallTown", ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="LargePlot", ObjectiveTags[2]="Vehicle", ObjectiveTags[3]="GOps_Vehicle")
 +arrPlots=(MapName="Plot_TWN_Mixed_LgObj_20_LW", strType="SmallTown", ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ObjectiveTags[0]="GuerillaOps", ObjectiveTags[1]="LargePlot", ObjectiveTags[2]="Vehicle", ObjectiveTags[3]="GOps_Vehicle")
